--- a/locale/de/de.cfg
+++ b/locale/de/de.cfg
@@ -1,11 +1,16 @@
-[CircuitTrains]
-NoName=[Simple Circuit Trains] Kein Fahrplanname
-NoScheduel=[Simple Circuit Trains] Zug ohne Fahrplan
-NoTrainOpen=[Simple Circuit Trains] Kein Zug offen
-NoLineSelected=[Simple Circuit Trains] Keine Linie ausgewählt
-NoValidSignal=[Simple Circuit Trains]Kein Gültiges Signal
+[Circuit]
+;Titles
+Title=Linien Management
+LineTitle=Wähle eine Linie
+
+;Labels/Buttons
 Stations=Stationen
-Line=Linien Management
+Name=Name:
 Signals=Signale
-NewLine=Neue Linie
 AddLine=Linie hinzufügen
+
+;Error Messages
+NoName=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Kein Linien Name![/color]
+NoTrainOpen=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Kein Zug geöffnet![/color]
+NoSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Zug hat keinen Fahrplan![/color]
+NoLineSelected=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Keine Linie ausgewählt, kann nicht löschen![/color]
