--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,11 +1,16 @@
-[CircuitTrains]
-NoName=[Simple Circuit Trains] No Schedule Name
-NoScheduel=[Simple Circuit Trains] Train without Schedule
-NoTrainOpen=[Simple Circuit Trains] No Train open
-NoLineSelected=[Simple Circuit Trains] No Line selected
-NoValidSignal=[Simple Circuit Trains]No Valid Signal
+[Circuit]
+;Titles
+Title=Line Management
+LineTitle=Choose a Line
+
+;Labels/Buttons
 Stations=Stations
-Line=Line Management
+Name=Name:
 Signals=Signals
-NewLine=New Line
 AddLine=Add Line
+
+;Error Messages
+NoName=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line Name![/color]
+NoTrainOpen=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Train openened![/color]
+NoSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Train has no Schedule![/color]
+NoLineSelected=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line selected, can't delete![/color]
