--- a/locale/de/de.cfg
+++ b/locale/de/de.cfg
@@ -6,7 +6,7 @@ LineTitle=Wähle eine Linie
 ;Labels/Buttons
 Stations=Stationen
 Name=Name:
-Signals=Signale
+Buttons=Signale/Editieren/Löschen
 AddLine=Linie hinzufügen
 
 ;Error Messages
