--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -4,9 +4,9 @@ Title=Line Management
 LineTitle=Choose a Line
 
 ;Labels/Buttons
-Stations=Stations
+Stations=Station
 Name=Name:
-Signals=Signals
+Buttons=Signal/Edit/Delete
 AddLine=Add Line
 
 ;Error Messages
