--- a/locale/de/de.cfg
+++ b/locale/de/de.cfg
@@ -8,9 +8,12 @@ Stations=Stationen
 Name=Name:
 Buttons=Signale/Editieren/Löschen
 AddLine=Linie hinzufügen
+UpdateLine=Linie erweitern
 
 ;Error Messages
 NoName=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Kein Linien Name![/color]
 NoTrainOpen=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Kein Zug geöffnet![/color]
 NoSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Zug hat keinen Fahrplan![/color]
 NoLineSelected=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Keine Linie ausgewählt, kann nicht löschen![/color]
+NoLineSelectedUpdate=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Keine Linie ausgewählt, kann nicht hinzufügen![/color]
+NotTheSameSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Die Fahrpläne sind nicht gleich, kann nicht hinzufügen![/color]
