--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -8,9 +8,12 @@ Stations=Station
 Name=Name:
 Buttons=Signal/Edit/Delete
 AddLine=Add Line
+UpdateLine=Extend Line
 
 ;Error Messages
 NoName=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line Name![/color]
 NoTrainOpen=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Train openened![/color]
 NoSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Train has no Schedule![/color]
-NoLineSelected=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line selected, can't delete![/color]
+NoLineSelected=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line selected, cannot delete![/color]
+NoLineSelectedUpdate=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line selected, cannot extend![/color]
+NotTheSameSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] The Schedules dont match, cannot extend![/color]
