--- a/locale/de/de.cfg
+++ b/locale/de/de.cfg
@@ -1,19 +1,25 @@
-[Circuit]
-;Titles
-Title=Linien Management
-LineTitle=Wähle eine Linie
+[sct-gui-labels]
+title=Linienverwaltung
+select-line=Eine Linie auswählen
+add-new-line=Neue Linie hinzufügen
+edit-line=Linie bearbeiten
+delete-line=Linie löschen
+sub-title=Linieneinstellungen:
+add-this-line=Diese Linie hinzufügen
+edit-this-line=Diese Linie bearbeiten, aber alle zugeordneten Signale werden gelöscht!
 
-;Labels/Buttons
-Stations=Stationen
-Name=Name:
-Buttons=Signale/Editieren/Löschen
-AddLine=Linie hinzufügen
-UpdateLine=Linie erweitern
+[sct-gui-error-messages]
+no-locomotive=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] Keine Lokomotive in der Nähe.[/color]
+train-in-use=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] Dieser Zug wird bereits von einer anderen Person benutzt[/color]
+no-schedule=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] Der Zug hat keinen Fahrplan, der als Linie hinzugefügt werden kann.[/color]
+no-signal=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] Für diese Linie wurde kein Signal ausgewählt.[/color]
+no-line-name=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] Für diese Linie wurde kein Name vergeben.[/color]
+line-name-already-used=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] Dieser Name wird bereits von einer anderen Linie verwendet.[/color]
 
-;Error Messages
-NoName=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Kein Linien Name![/color]
-NoTrainOpen=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Kein Zug geöffnet![/color]
-NoSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Zug hat keinen Fahrplan![/color]
-NoLineSelected=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Keine Linie ausgewählt, kann nicht löschen![/color]
-NoLineSelectedUpdate=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Keine Linie ausgewählt, kann nicht hinzufügen![/color]
-NotTheSameSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Die Fahrpläne sind nicht gleich, kann nicht hinzufügen![/color]
+[tips-and-tricks-item-name]
+simple-circuit-trains=Simple Circuit Trains
+automatic-coupling-system-and-simple-circuit-trains=Automatic Coupling System & Simple Circuit Trains
+
+[tips-and-tricks-item-description]
+simple-circuit-trains=Simple Circuit Trains ist ein Mod, mit dem du zwischen Fahrplänen wechseln kannst. Und innerhalb dieser Fahrpläne musst du eine Haltestelle auswählen, zu der der Zug als nächstes fahren wird.\nDie Logik liest die Linie(Fahrplan) aus dem [item=red-wire] und die Haltestelle in dieser Linie(Fahrplan) aus dem [item=green-wire].\n\n[font=default-bold]Dies geschieht NACH dem Verlassen einer Haltestelle.\nDas Tutorial zeigt ein Beispiel.[/font]
+automatic-coupling-system-and-simple-circuit-trains=Automatic Coupling System & Simple Circuit Trains sind so geschrieben, dass sie problemlos zusammenarbeiten. Ich empfehle sogar, sie zusammen zu verwenden.\n\n[font=default-bold]Das Tutorial zeigt ein Beispiel für das Zusammenspiel beider Mods.[/font]
