--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,19 +1,25 @@
-[Circuit]
-;Titles
-Title=Line Management
-LineTitle=Choose a Line
+[sct-gui-labels]
+title=Line Management
+select-line=Select a line
+add-new-line=Add new line
+edit-line=Edit line
+delete-line=Delete line
+sub-title=Line Settings:
+add-this-line=Add this line
+edit-this-line=Edit this line, but all assigned signals will be deleted!
 
-;Labels/Buttons
-Stations=Station
-Name=Name:
-Buttons=Signal/Edit/Delete
-AddLine=Add Line
-UpdateLine=Extend Line
+[sct-gui-error-messages]
+no-locomotive=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] No locomotive nearby.[/color]
+train-in-use=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] This train is already been used by somebody else.[/color]
+no-schedule=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] The train has no schedule, that can be added as a line.[/color]
+no-signal=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] No signal selected for this line.[/color]
+no-line-name=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] No name given for this line.[/color]
+line-name-already-used=[font=default-large-bold][Simple Circuit Trains][/font] [img=utility/danger_icon][color=255,57,48] This name is already used by another line.[/color]
 
-;Error Messages
-NoName=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line Name![/color]
-NoTrainOpen=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Train openened![/color]
-NoSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] Train has no Schedule![/color]
-NoLineSelected=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line selected, cannot delete![/color]
-NoLineSelectedUpdate=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] No Line selected, cannot extend![/color]
-NotTheSameSchedule=[font=default-large-bold][Simple Circuit Trains] [/font][img=utility/danger_icon][color=255,57,48] The Schedules dont match, cannot extend![/color]
+[tips-and-tricks-item-name]
+simple-circuit-trains=Simple Circuit Trains
+automatic-coupling-system-and-simple-circuit-trains=Automatic Coupling System & Simple Circuit Trains
+
+[tips-and-tricks-item-description]
+simple-circuit-trains=Simple Circuit Trains is a mod that lets you switch between schedules. And inside these Schedules you need to select a station, to which the train will go next.\nThe logic reads the line(schedule) from the [item=red-wire] and the station in that line(schedule) from the [item=green-wire].\n\n[font=default-bold]This happens AFTER leaving a station.\nThe tutorial shows you a example.[/font]
+automatic-coupling-system-and-simple-circuit-trains=Automatic Coupling System & Simple Circuit Trains are written in a way, so that they work together without any problems.\nI even recommend that they are used together.\n\n[font=default-bold]The tutorial shows you a example for both mods working together.[/font]
